syntax = "proto3";

option csharp_namespace = "PaymentService.GrpcService";

package payment;

service PaymentService {
  rpc Deposit (DepositRequest) returns (TransactionResponse);
  rpc Withdraw (WithdrawRequest) returns (TransactionResponse);
  rpc MakePayment (PaymentRequest) returns (TransactionResponse);
  rpc GetAccount (GetAccountRequest) returns (AccountResponse);
  rpc GetTransactionHistory (GetTransactionHistoryRequest) returns (TransactionHistoryResponse);
}

message DepositRequest {
  string user_id = 1;
  int64 amount = 2;
  string description = 3;
}

message WithdrawRequest {
  string user_id = 1;
  int64 amount = 2;
  string description = 3;
}

message PaymentRequest {
  string user_id = 1;
  int64 amount = 2;
  string reference_id = 3;
  string reference_type = 4;
  string description = 5;
}

message GetAccountRequest {
  string user_id = 1;
}

message GetTransactionHistoryRequest {
  string user_id = 1;
}

message TransactionResponse {
  string id = 1;
  string account_id = 2;
  int64 amount = 3;
  string type = 4;
  string status = 5;
  string description = 6;
  string reference_id = 7;
  string reference_type = 8;
  string created_at = 9;
  string updated_at = 10;
}

message AccountResponse {
  string id = 1;
  string user_id = 2;
  int64 balance = 3;
  string currency = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message TransactionHistoryResponse {
  repeated TransactionResponse transactions = 1;
} 